[gd_scene load_steps=4 format=2]

[ext_resource path="res://textures/ui/character_selection/player1.png" type="Texture" id=1]
[ext_resource path="res://textures/ui/character_selection/player2.png" type="Texture" id=2]
[ext_resource path="res://scenes/ui/character_selection/CharacterMenuItem.gd" type="Script" id=3]

[node name="CharacterMenuItem" type="Node2D"]
script = ExtResource( 3 )

[node name="SpriteRoot" type="Node2D" parent="."]
position = Vector2( 140, 20 )

[node name="InactiveSpriteRoot" type="Node2D" parent="."]
position = Vector2( 140, 40 )

[node name="Player1" type="Sprite" parent="."]
position = Vector2( 80, 160 )
texture = ExtResource( 1 )

[node name="Player2" type="Sprite" parent="."]
position = Vector2( 800, 160 )
texture = ExtResource( 2 )
